# camkes

./: .gitignore  default.xml  master.xml
apps/aadl-buffer/: CMakeLists.txt  aadl-buffer.camkes
apps/aadl-event-direct/: CMakeLists.txt  README  aadl-event-direct.camkes
apps/aadl-event-direct/components/Receiver/: CMakeLists.txt  Receiver.camkes
apps/aadl-event-direct/components/Receiver/src/: receiver.c
apps/aadl-event-direct/components/Sender/: CMakeLists.txt  Sender.camkes
apps/aadl-event-direct/components/Sender/src/: sender.c
apps/aadl-event-direct/interfaces/: counter.h
apps/aadl-event-monitor/: CMakeLists.txt  README  aadl-event-monitor.camkes
apps/aadl-event-monitor/interfaces/: AADLEvent.idl4
apps/aadl-eventdata-direct/: CMakeLists.txt  README  aadl-eventdata-direct.camkes
apps/aadl-eventdata-direct-new/: CMakeLists.txt  aadl-eventdata-direct.camkes  settings.cmake
apps/aadl-eventdata-direct-new/components/Receiver/: CMakeLists.txt  Receiver.camkes
apps/aadl-eventdata-direct-new/components/Receiver/src/: receiver.c
apps/aadl-eventdata-direct-new/components/Sender/: CMakeLists.txt  Sender.camkes
apps/aadl-eventdata-direct-new/components/Sender/src/: queue.c  sender.c
apps/aadl-eventdata-direct-new/interfaces/: queue.h
apps/aadl-eventdata-direct-new/queue/: CMakeLists.txt
apps/aadl-eventdata-direct-new/templates/: CASE_AADL_EventDataport-to.template.c
apps/aadl-eventdata-direct-new/vm/: CMakeLists.txt  README.md  domain_schedule.c
apps/aadl-eventdata-direct-new/vm/exynos5422/: devices.camkes
apps/aadl-eventdata-direct-new/vm/qemu-arm-virt/: devices.camkes
apps/aadl-eventdata-direct-new/vm/src/: cross_vm_connections_VMHub.c  cross_vm_connections_receiver.c  cross_vm_connections_sender.c
apps/aadl-eventdata-direct/interfaces/: queue.c  queue.h  queue2.c  queue2.h
apps/aadl-eventdata-monitor/: CMakeLists.txt  README  aadl-eventdata-monitor.camkes
apps/aadl-eventdata-monitor/interfaces/: AADLEventData.idl4
apps/aadl-eventdata-virtqueue/: CMakeLists.txt  README  aadl-eventdata-virtqueue.camkes
apps/aadl-eventdata-virtqueue/components/Receiver/: Receiver.camkes
apps/aadl-eventdata-virtqueue/components/Receiver/src/: receiver.c
apps/aadl-eventdata-virtqueue/components/Sender/: Sender.camkes
apps/aadl-eventdata-virtqueue/components/Sender/src/: sender.c
apps/aadl-hash/: CMakeLists.txt  aadl-hash.camkes
apps/aadl-monitor/: CMakeLists.txt  aadl-monitor.camkes
apps/aadl-monitor-oneway/: CMakeLists.txt  aadl-monitor-oneway.camkes
apps/aadl-wrapper/: CMakeLists.txt  aadl-wrapper.camkes
apps/rumprun_rust/: Makefile  rumprun_rust.camkes
(+54 files in other folders)
